Fix figcaptions in alignfull gallery blocks (#654)
* Fix figcaptions in alignfull gallery blocks

* Modified previous solution to not be gallery specific

* Updated media figcaption styles to better reflect front-end

* Build RTL

* Fixed targeting of core-embed blocks

Fixes #595

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3306,8 +3306,8 @@ hr.wp-block-separator {
 
 /* Entry Media ------------------------------- */
 
-.alignfull figcaption,
-.alignfull .wp-caption-text {
+.alignfull > figcaption,
+.alignfull > .wp-caption-text {
 	margin-right: auto;
 	margin-left: auto;
 	max-width: 120rem;
@@ -4829,8 +4829,8 @@ a.to-the-top > * {
 
 	/* ENTRY MEDIA */
 
-	.alignfull figcaption,
-	.alignfull .wp-caption-text {
+	.alignfull > figcaption,
+	.alignfull > .wp-caption-text {
 		width: calc(100% - 8rem);
 	}
 
@@ -5286,8 +5286,8 @@ a.to-the-top > * {
 
 	/* ENTRY MEDIA */
 
-	.alignfull figcaption,
-	.alignfull .wp-caption-text {
+	.alignfull > figcaption,
+	.alignfull > .wp-caption-text {
 		width: calc(100% - 10rem);
 	}
 
